# rse-CIRRUS-benchmark-suite

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
cirrus_benchmark_suite/: benchmark.py  evaluate.py  history.py  session.py  utils.py
data/: benchmarks.csv
tests/: test_evaluate.py  test_history.py
tests/resources/: benchmarks.csv
